import { Text, View } from "react-native";

export default function HomeScreen() {
    return (
        <View className="flex-1 items-center justify-center bg-app">
            <Text className="text-2xl font-clash text-app">
                Home
            </Text>
        </View>
    );
}
